# todoist-agent

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  design.md  docker-compose.yml  litellm_config.yaml  pyproject.toml  requirements.md
src/: config.py
src/ingress/: app.py  idempotency.py  queue.py  signature.py
src/models/: todoist.py
src/state/: db.py
src/worker/: main.py
supabase/: config.toml
supabase/migrations/: 20250520000001_core_tables.sql
tests/: conftest.py
tests/ingress/: test_webhook.py
tests/models/: test_todoist.py
